--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog</title>
+	<title>Finsweet</title>
 	<link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-	
+	<h1>Nabieva Zakhrogit</h1>
 </body>
 </html>
