--- a/policy.html
+++ b/policy.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Akromjonova Sevara</h1>
-    <p>lorem</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, doloremque sit. Ipsam tenetur culpa illum fuga modi. Dolorem non magnam ut aspernatur esse quidem, culpa quasi mollitia expedita repellat nam id temporibus laudantium. Sequi a autem ratione, reiciendis optio repellat quae eaque enim atque iure cum nemo! Non repellat officia quidem voluptates aliquid rem temporibus aliquam. Iusto maxime pariatur numquam quasi culpa quos voluptatibus mollitia explicabo optio unde? Ea nostrum iste voluptas neque molestias exercitationem aliquid impedit cumque. Non tempore quas cum rem illum voluptatibus tempora natus, assumenda possimus eos, quaerat animi voluptas in dignissimos nemo aut ducimus dolorem nam?</p>
   </body>
 </html>
