--- a/policy.html
+++ b/policy.html
@@ -7,6 +7,6 @@
     <title>Policy</title>
   </head>
   <body>
-    <!-- <h1>Akromjonova Sevara</h1> -->
+    <!-- Akromjonova Sevara -->
   </body>
 </html>
