--- a/author.html
+++ b/author.html
@@ -7,6 +7,6 @@
     <title>Author</title>
   </head>
   <body>
-    <h1>Akromjonova Sevara</h1>
+    <!-- Akromjonova Sevara -->
   </body>
 </html>
