--- a/index.html
+++ b/index.html
@@ -40,14 +40,98 @@
         <section class="headercontent">
           <h2>Posted on <span>startup</span></h2>
           <h1>Step-by-step guide to choosing great font pairs</h1>
-          <p>By James West  |  May 23, 2022 </p>
+          <p>By <span>James West</span>  |  May 23, 2022 </p>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
-          <button>Read More ></button>
+          <button><a href="blogpost.html"> Read More <i class="uil uil-angle-right-b"></i></a></button>
         </section>
       </div>
     </header>
     <main>
-
+      <div class="container">
+        <section class="featured-post">
+          <div class="featured-post-left">
+            <h1>Featured Post</h1>
+            <div class="postcard">
+              <img src="./images/home/postimg.png" alt="">
+              <p>By John Doe   l   May 23, 2022</p>
+              <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</h1>
+              <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</h2>
+              <button><a href="">Read More <i class="uil uil-angle-right-b"></i></a></button>
+            </div>
+          </div>
+          <div class="featured-post-right">
+            <div class="featured-post-right-top">
+               <h1>All Posts</h1>
+               <a href="blogpost.html">View All</a>
+            </div>
+            <div class="featured-post-cards">
+              <div class="featured-postcard">
+                <p>By <span>John Deo</span>   l   Aug 23, 2021 </p>
+                <h1>8 Figma design systems that you can download for free today.</h1>
+              </div>
+              <div class="featured-postcard">
+                <p>By <span>John Deo</span>   l   Aug 23, 2021 </p>
+                <h1>8 Figma design systems that you can download for free today.</h1>
+              </div>
+              <div class="featured-postcard">
+                <p>By <span>John Deo</span>   l   Aug 23, 2021 </p>
+                <h1>8 Figma design systems that you can download for free today.</h1>
+              </div>
+              <div class="featured-postcard">
+                <p>By <span>John Deo</span>   l   Aug 23, 2021 </p>
+                <h1>8 Figma design systems that you can download for free today.</h1>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="home-about-section">
+          <div class="home-about-section-side">
+            <h2>About Us</h2>
+            <h1>We are a community of content writers who share their learnings</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="">Read more <i class="uil uil-angle-right-b"></i></a>
+          </div>
+          <div class="home-about-section-side">
+            <h2>Our Mission</h2>
+            <h1>Creating valuable content for creatives all around the world</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </section>
+        <section class="home-category">
+          <h1>Choose A Catagory</h1>
+          <div class="home-categories">
+            <div class="home-category-card">
+              <img src="./images/home/i1.png" alt="">
+              <h1>Business</h1>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="home-category-card">
+              <img src="./images/home/i2.png" alt="">
+              <h1>Startup</h1>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="home-category-card">
+              <img src="./images/home/i3.png" alt="">
+              <h1>Economy</h1>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="home-category-card">
+              <img src="./images/home/i4.png" alt="">
+              <h1>Technology</h1>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+          </div>
+        </section>
+        <section class="home-discover-story">
+          <img src="images/home/bgimg2.png" alt="">
+          <div class="home-discover-story-card">
+            <h2>Why we started </h2>
+            <h1>It started out as a simple idea and evolved into our passion</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <button><a href="about.html">Discover our story <i class="uil uil-angle-right-b"></i></a></button>
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
       <div class="container">
