--- a/index.html
+++ b/index.html
@@ -131,6 +131,55 @@
             <button><a href="about.html">Discover our story <i class="uil uil-angle-right-b"></i></a></button>
           </div>
         </section>
+        <section class="home-authors">
+          <h1>List Of Authors</h1>
+          <div class="home-authors-cards">
+            <div class="home-authors-card">
+              <img src="images/home/a1.png" alt="">
+              <h1>Floyd Miles</h1>
+              <p>Content Writer @Company</p>
+              <div class="home-authors-card-links">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
+                <a href="https://www.twitter.com/"><img src="./images/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a>
+              </div>
+            </div>
+            <div class="home-authors-card">
+              <img src="images/home/a2.png" alt="">
+              <h1>Dianne Russell</h1>
+              <p>Content Writer @Company</p>
+              <div class="home-authors-card-links">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
+                <a href="https://www.twitter.com/"><img src="./images/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a>
+              </div>
+            </div>
+            <div class="home-authors-card">
+              <img src="images/home/a3.png" alt="">
+              <h1>Jenny Wilson</h1>
+              <p>Content Writer @Company</p>
+              <div class="home-authors-card-links">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
+                <a href="https://www.twitter.com/"><img src="./images/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a>
+              </div>
+            </div>
+            <div class="home-authors-card">
+              <img src="images/home/a4.png" alt="">
+              <h1>Leslie Alexander</h1>
+              <p>Content Writer @Company</p>
+              <div class="home-authors-card-links">
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
+                <a href="https://www.twitter.com/"><img src="./images/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
