--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <section class="home-join-section">
           <h1>Join our team to be a part of our story</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-          <button>Join Now</button>
+          <button><a href="contact.html"></a>Join Now</button>
         </section>
       </div>
     </main>
