--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <button id="backtop" style="opacity: 1;">
+      <a href="#">Up</a>
+    </button>
     <nav id="navbar" class="navbarshrink">
       <div class="container navcontainer">
         <div class="navlogo">
@@ -20,16 +23,16 @@
           <i class="uil uil-bars" onclick="openNavbar()"></i>
         </div>
         <div class="navlinks">
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="blog.html">Blog</a>
           <a href="about.html">About us</a>
           <a href="contact.html">Contact us</a>
           <button class="navbutton">Subscribe</button>
         </div>
-        <div id="navbar-responsive" class="overlay">
+        <div id="navbar-responsive">
           <i id="navbar-close" class="uil uil-multiply" onclick="closeNavbar()"></i>
           <div class="hamcontent">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
@@ -240,7 +243,7 @@
         <div class="footertop">
           <img src="./images/Logo.png" alt="">
           <div class="footerlinks">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
             <a href="about.html">About us</a>
             <a href="contact.html">Contact us</a>
