--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Nabieva Zakhro</h1>
+	<h2>Abdullox bosh xarifi kotta!</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam non numquam
       excepturi, temporibus delectus officiis nemo ad ut itaque eligendi hic
