--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,13 @@
               </div>
             </div>
             <div class="toggle">
-              <button id="navbar-open"><i class="uil uil-list-ul"></i></button>
-              <button id="navbar-close"><i class="uil uil-times"></i></button>
+              <button id="navbar-open" onclick="openNavbar()"><i class="uil uil-list-ul"></i></button>
             </div>
           </div>
         </div>
       </nav>
       <nav id="navbar-responsive">
+        <button id="navbar-close" onclick="closeNavbar()"><i class="uil uil-times"></i></button>
         <a href="index.html" class="nav-link">Home</a>
         <a href="blogpost.html" class="nav-link">Blog</a>
         <a href="about.html" class="nav-link">About Us</a>
