--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>finsweet</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/blog.css" />
+  </head>
+  <body>
     <h1>_rax1movvv</h1>
-    <p>abdulloh</p>
-</body>
+  </body>
 </html>
