--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Nabieva Zakhro</h1>
 	<h2>Abdullox bosh xarifi kotta!</h2>
 	<p>harfda yumshoq h + r dan keyin i yozilmidi!!!</p>
+  <h1>Sizzi gapiz tori!))</h1>
   </body>
 </html>
