--- a/author.html
+++ b/author.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Author</title>
+    <link rel="stylesheet" href="./css/author.css" />
   </head>
   <body>
-   <!-- Akromjonova Sevara -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-container">
+          <div class="navbar-left">
+            <a href="category.html"
+              ><img src="images/blog/Logo.svg" alt="page"
+            /></a>
+          </div>
+          <div class="navbar-right">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="blogpost.html" class="nav-link">Blog</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">Contact Us</a>
+            <div class="navbar-right-button">
+              <a href=""><button>Subscribe</button></a>
+            </div>
+          </div>
+          <div class="toggle">
+            <button id="navbar-open"><i class="uil uil-list-ul"></i></button>
+            <button id="navbar-close"><i class="uil uil-times"></i></button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <nav id="navbar-responsive">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="blogpost.html" class="nav-link">Blog</a>
+      <a href="about.html" class="nav-link">About Us</a>
+      <a href="contact.html" class="nav-link">Contact Us</a>
+      <div class="navbar-right-button">
+        <a href=""><button>Subscribe</button></a>
+      </div>
+    </nav>
+    <header>
+      <div class="logo">
+        <div class="logo-image"></div>
+        <h1>Hey there, I’m Andrew Jonhson and welcome to my Blog</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Non
+          blandit massa enim nec. Scelerisque viverra mauris in aliquam sem. At
+          risus viverra adipiscing at in tellus.
+        </p>
+      </div>
+      <div class="cards">
+        <div class="card">
+          <h1>My Posts</h1>
+          <div class="card-image"></div>
+          <p>BUSINESS</p>
+          <h2>Font sizes in UI design: The complete guide to follow</h2>
+          <div class="text">
+            <p>
+              
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <script src="js/main.js"></script>
   </body>
 </html>
