--- a/blog.html
+++ b/blog.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./css/blog.css" />
   </head>
   <body>
-    <a class="backtop-link" href="blog.html"
-        ><button id="backtop"><i class="uil uil-angle-up"></i></button
-      ></a>
+    <button id="backtop" style="opacity: 1;">
+      <a href="#">Up</a>
+    </button>
     <header>
       <nav class="navbar">
         <div class="container">
