--- a/policy.html
+++ b/policy.html
@@ -9,5 +9,39 @@
   </head>
   <body>
     <!-- Akromjonova Sevara -->
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-container">
+          <div class="navbar-left">
+            <a href="category.html"
+              ><img src="images/blog/Logo.svg" alt="page"
+            /></a>
+          </div>
+          <div class="navbar-right">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="blogpost.html" class="nav-link">Blog</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">Contact Us</a>
+            <div class="navbar-right-button">
+              <a href=""><button>Subscribe</button></a>
+            </div>
+          </div>
+          <div class="toggle">
+            <button id="navbar-open"><i class="uil uil-list-ul"></i></button>
+            <button id="navbar-close"><i class="uil uil-times"></i></button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <nav id="navbar-responsive">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="blogpost.html" class="nav-link">Blog</a>
+      <a href="about.html" class="nav-link">About Us</a>
+      <a href="contact.html" class="nav-link">Contact Us</a>
+      <div class="navbar-right-button">
+        <a href=""><button>Subscribe</button></a>
+      </div>
+    </nav>
+  <script src="js/main.js"></script>
   </body>
 </html>
