--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <p>By John Doe   l   May 23, 2022</p>
               <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</h1>
               <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</h2>
-              <button><a href="">Read More <i class="uil uil-angle-right-b"></i></a></button>
+              <button><a href="blogpost.html">Read More <i class="uil uil-angle-right-b"></i></a></button>
             </div>
           </div>
           <div class="featured-post-right">
@@ -94,7 +94,7 @@
             <h2>About Us</h2>
             <h1>We are a community of content writers who share their learnings</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a href="">Read more <i class="uil uil-angle-right-b"></i></a>
+            <a href="about.html">Read more <i class="uil uil-angle-right-b"></i></a>
           </div>
           <div class="home-about-section-side">
             <h2>Our Mission</h2>
@@ -234,7 +234,7 @@
         <section class="home-join-section">
           <h1>Join our team to be a part of our story</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-          <button><a href="contact.html"></a>Join Now</button>
+          <button><a href="contact.html">Join Now</a></button>
         </section>
       </div>
     </main>
