--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="home-authors-cards">
             <div class="home-authors-card">
               <img src="images/home/a1.png" alt="">
-              <h1>Floyd Miles</h1>
+              <h1><a href="author.html">Floyd Miles</a></h1>
               <p>Content Writer @Company</p>
               <div class="home-authors-card-links">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
@@ -152,7 +152,7 @@
             </div>
             <div class="home-authors-card">
               <img src="images/home/a2.png" alt="">
-              <h1>Dianne Russell</h1>
+              <h1><a href="author.html">Dianne Russell</a></h1>
               <p>Content Writer @Company</p>
               <div class="home-authors-card-links">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
@@ -163,7 +163,7 @@
             </div>
             <div class="home-authors-card">
               <img src="images/home/a3.png" alt="">
-              <h1>Jenny Wilson</h1>
+              <h1><a href="author.html">Jenny Wilson</a></h1>
               <p>Content Writer @Company</p>
               <div class="home-authors-card-links">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
@@ -174,7 +174,7 @@
             </div>
             <div class="home-authors-card">
               <img src="images/home/a4.png" alt="">
-              <h1>Leslie Alexander</h1>
+              <h1><a href="author.html">Leslie Alexander</a></h1>
               <p>Content Writer @Company</p>
               <div class="home-authors-card-links">
                 <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
