--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 <i class="uil uil-bars" onclick="openNavbar()"></i>
               </div>
               <div class="navlinks">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="blog.html">Blog</a>
                 <a href="about.html">About us</a>
                 <a href="contact.html">Contact us</a>
