--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,282 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog</title>
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <link rel="stylesheet" href="./css/blog.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-container">
+            <div class="navbar-left">
+              <a href="category.html"
+                ><img src="images/blog/Logo.svg" alt="page"
+              /></a>
+            </div>
+            <div class="navbar-right">
+              <a href="index.html" class="nav-link">Home</a>
+              <a href="blogpost.html" class="nav-link">Blog</a>
+              <a href="about.html" class="nav-link">About Us</a>
+              <a href="contact.html" class="nav-link">Contact Us</a>
+              <div class="navbar-right-button">
+                <a href="blog.html"><button>Subscribe</button></a>
+              </div>
+            </div>
+            <div class="toggle">
+              <button id="navbar-open"><i class="uil uil-list-ul"></i></button>
+              <button id="navbar-close"><i class="uil uil-times"></i></button>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <nav id="navbar-responsive">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="blogpost.html" class="nav-link">Blog</a>
+        <a href="about.html" class="nav-link">About Us</a>
+        <a href="contact.html" class="nav-link">Contact Us</a>
+        <div class="navbar-right-button">
+          <a href="blog.html"><button>Subscribe</button></a>
+        </div>
+      </nav>
+      <section id="home">
+        <div class="container">
+          <div class="home-container">
+            <div class="home-left">
+              <p class="p-1">Featured Post</p>
+              <h1>Step-by-step guide to choosing great font pairs</h1>
+              <p class="p-2">By John Doe l May 23, 2022</p>
+              <p class="p-3">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident.
+              </p>
+              <div class="home-button">
+                <button>Read More ></button>
+              </div>
+            </div>
+            <div class="home-right">
+              <img src="images/blog/home-right.svg" alt="page" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section id="slider">
+        <div class="container">
+          <div class="slider-paragraph">
+            <h2>All posts</h2>
+          </div>
+          <div class="owl-carousel">
+            <div class="boxs">
+              <a href="blogpost.html"
+                ><div class="box">
+                  <div class="box-left">
+                    <img src="images/blog/box-1.svg" alt="page" />
+                  </div>
+                  <div class="box-right">
+                    <p class="p-4">Startup</p>
+                    <h3>
+                      Design tips for designers that cover <br />everything you
+                      need
+                    </h3>
+                    <p class="p-5">
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat <br />nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident.
+                    </p>
+                  </div>
+                </div></a
+              >
+              <a href="about.html"
+                ><div class="box">
+                  <div class="box-left">
+                    <img src="images/blog/box-2.svg" alt="page" />
+                  </div>
+                  <div class="box-right">
+                    <p class="p-4">BUSINESS</p>
+                    <h3>
+                      How to build rapport with your web <br />design clients
+                    </h3>
+                    <p class="p-5">
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat <br />nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident.
+                    </p>
+                  </div>
+                </div></a
+              >
+              <a href="category.html"
+                ><div class="box">
+                  <div class="box-left">
+                    <img src="images/blog/box-3.svg" alt="page" />
+                  </div>
+                  <div class="box-right">
+                    <p class="p-4">Startup</p>
+                    <h3>Logo design trends to avoid in 2022</h3>
+                    <p class="p-5">
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat <br />nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident.
+                    </p>
+                  </div>
+                </div></a
+              >
+              <a href="author.html"
+                ><div class="box">
+                  <div class="box-left">
+                    <img src="images/blog/box-4.svg" alt="page" />
+                  </div>
+                  <div class="box-right">
+                    <p class="p-4">TECHNOLOGY</p>
+                    <h3>
+                      8 Figma design systems you can <br />download for free
+                      today
+                    </h3>
+                    <p class="p-5">
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat <br />nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident.
+                    </p>
+                  </div>
+                </div></a
+              >
+              <a href="contact.html"
+                ><div class="box">
+                  <div class="box-left">
+                    <img src="images/blog/box-1.svg" alt="page" />
+                  </div>
+                  <div class="box-right">
+                    <p class="p-4">ECONOMY</p>
+                    <h3>
+                      Font sizes in UI design: The complete <br />guide to
+                      follow
+                    </h3>
+                    <p class="p-5">
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat <br />nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident.
+                    </p>
+                  </div>
+                </div></a
+              >
+            </div>
+            <div class="prev-next">
+              <p>< Prev</p>
+              <p>Next ></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="catigories">
+        <div class="container">
+          <div class="catigories-paragraph">
+            <h2>All Categories</h2>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <button><img src="images/blog/card-1.svg" alt="page" /></button>
+              <h4>Business</h4>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="card">
+              <button><img src="images/blog/card-2.svg" alt="page" /></button>
+              <h4>Startup</h4>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="card">
+              <button><img src="images/blog/card-3.svg" alt="page" /></button>
+              <h4>Economy</h4>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="card">
+              <button><img src="images/blog/card-4.svg" alt="page" /></button>
+              <h4>Technology</h4>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="join">
+            <h3>Join our team to be a part <br />of our story</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing <br />elit, sed
+              do eiusmod tempor incididunt.
+            </p>
+          </div>
+          <div class="join-button">
+            <button>Join Now</button>
+          </div>
+        </div>
+      </section>
+    </main>
 
+    <footer>
+      <section id="footer">
+        <div class="container">
+          <div class="footer-container">
+            <div class="footer-top">
+              <div class="footer-top-left">
+                <img src="images/blog/Logo.svg" alt="page" />
+              </div>
+              <div class="footer-top-right">
+                <a href="index.html">Home</a>
+                <a href="blogpost.html" class="footer-link">Blog</a>
+                <a href="about.html" class="footer-link">About Us</a>
+                <a href="contact.html" class="footer-link">Contact Us</a>
+                <a href="policy.html" class="footer-link">Privacy Policy</a>
+              </div>
+            </div>
+            <div class="footer-input">
+              <div class="footer-input-left">
+                <h2>
+                  Subscribe to our news letter to get latest updates and news
+                </h2>
+              </div>
+              <div class="footer-input-right">
+                <form action="#">
+                  <input
+                    required
+                    type="email"
+                    placeholder="Enter Your Email"
+                    id="email"
+                    name="email"
+                  />
+                  <input
+                    required
+                    type="submit"
+                    id="submit"
+                    value="Subscribe"
+                    name="submit"
+                  />
+                </form>
+              </div>
+            </div>
+            <div class="footer-bottom">
+              <div class="footer-bottom-left">
+                <p>Finstreet 118 2561 Fintown</p>
+                <p>Hello@finsweet.com 020 7993 2905</p>
+              </div>
+              <div class="footer-bottom-right">
+                <img src="images/facebook.png" alt="page" />
+                <img src="images/twitter.png" alt="page" />
+                <img src="images/instagram.png" alt="page" />
+                <img src="images/linkedin.png" alt="page" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <a class="backtop-link" href="blog.html"
+        ><button id="backtop"><i class="uil uil-angle-up"></i></button
+      ></a>
+    </footer>
+    <script src="js/main.js"></script>
+  </body>
+</html>
