--- a/category.html
+++ b/category.html
@@ -7,6 +7,188 @@
     <title>Category</title>
 </head>
 <body>
-    <h1>Shermatov Shahzod</h1>
+    <link rel="stylesheet" href="./css/category.css">
+    <header>
+        <nav class="navbar">
+          <div class="quti">
+            <div class="navbar-container">
+              <div class="navbar-left">
+                <a href="category.html"
+                  ><img src="images/blog/Logo.svg" alt="page"
+                /></a>
+              </div>
+              <div class="navbar-right">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="blogpost.html" class="nav-link">Blog</a>
+                <a href="about.html" class="nav-link">About Us</a>
+                <a href="contact.html" class="nav-link">Contact Us</a>
+                <div class="navbar-right-button">
+                  <a href="blog.html"><button>Subscribe</button></a>
+                </div>
+              </div>
+              <div class="toggle">
+                <button id="navbar-open" onclick="openNavbar()"><i class="uil uil-list-ul"></i></button>
+              </div>
+            </div>
+          </div>
+        </nav>
+        <nav id="navbar-responsive">
+          <button id="navbar-close" onclick="closeNavbar()"><i class="uil uil-times"></i></button>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="blogpost.html" class="nav-link">Blog</a>
+          <a href="about.html" class="nav-link">About Us</a>
+          <a href="contact.html" class="nav-link">Contact Us</a>
+          <div class="navbar-right-button">
+            <a href="blog.html"><button>Subscribe</button></a>
+          </div>
+        </nav>
+    </header>
+    <div class="container">
+      <div class="content">
+      <h1>Business</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis sequi <br> corporis nihil dolorum vel!</p>
+      <h2>Blog > Business</h2>
+      </div>
+    </div>
+    <section id="slider">
+      <div class="container">
+        <div class="owl-carousel">
+          <div class="boxs">
+            <a href="blogpost.html"
+              ><div class="box">
+                <div class="box-left">
+                  <img src="images/blog/box-1.svg" alt="page" />
+                </div>
+                <div class="box-right">
+                  <p class="p-4">BUSINESS</p>
+                  <h3>
+                    Top 6 free website mockup tools <br> 2022
+                  </h3>
+                  <p class="p-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Non <br> blandit massa enim nec.
+                  </p>
+                </div>
+              </div></a
+            >
+            <a href="about.html"
+              ><div class="box">
+                <div class="box-left">
+                  <img src="images/blog/box-1.svg" alt="page" />
+                </div>
+                <div class="box-right">
+                  <p class="p-4">BUSINESS</p>
+                  <h3>
+                    Step-by-step guide to choosing <br> great font pairs
+                  </h3>
+                  <p class="p-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Non <br> blandit massa enim nec.
+                  </p>
+                </div>
+              </div></a
+            >
+            <a href="category.html"
+              ><div class="box">
+                <div class="box-left">
+                  <img src="images/blog/box-1.svg" alt="page" />
+                </div>
+                <div class="box-right">
+                  <p class="p-4">BUSINESS</p>
+                  <h3>Ten free foogle fonts that you <br> should use</h3>
+                  <p class="p-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Non <br> blandit massa enim nec.
+                  </p>
+                </div>
+              </div></a
+            >
+            <a href="contact.html"
+              ><div class="box">
+                <div class="box-left">
+                  <img src="images/blog/box-1.svg" alt="page" />
+                </div>
+                <div class="box-right">
+                  <p class="p-4">BUSINESS</p>
+                  <h3>
+                    What did I learn from doing 50+ <br> design sprints?
+                  </h3>
+                  <p class="p-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Non <br> blandit massa enim nec.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+          <section id="catigories">
+            <div class="container">
+              <div class="catigories-paragraph">
+                <h2>Categories</h2>
+              </div>
+              <div class="cards">
+                <div class="card">
+                  <button><img src="images/blog/card-1.svg" alt="page" /></button>
+                  <h4>Business</h4>
+                </div>
+                <div class="card">
+                  <button><img src="images/blog/card-2.svg" alt="page" /></button>
+                  <h4>Startup</h4>
+                </div>
+                <div class="card">
+                  <button><img src="images/blog/card-3.svg" alt="page" /></button>
+                  <h4>Economy</h4>
+                </div>
+                <div class="card">
+                  <button><img src="images/blog/card-4.svg" alt="page" /></button>
+                  <h4>Technology</h4>
+                </div>
+              </div>
+            </div>
+          </section>
+        <section id="All-Tags">
+          <div class="buttons">
+            <h1>"All Tags</h1>
+            <button>Business</button>
+            <button>Screen</button>
+            <button>Marketing</button>
+            <button>Experience</button>
+            <button>Technology</button>
+            <button>Life</button>
+          </div>
+        </section>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="quticha">
+        <div class="footertop">
+          <img src="./images/Logo.png" alt="">
+          <div class="footerlinks">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="about.html">About us</a>
+            <a href="contact.html">Contact us</a>
+            <a href="policy.html">Privacy Policy</a>
+          </div>
+        </div>
+        <div class="footer-subscribe">
+          <h2>Subscribe to our news letter to get latest updates and news</h2>
+          <form class="footer-form" >
+            <input type="email" placeholder="Enter Your Email">
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-bottom-left">
+            <p>Finstreet 118 2561 Fintown</p>
+            <p>Hello@finsweet.com  020 7993 2905</p>
+          </div>
+          <div class="footer-bottom-right">
+            <a href="https://www.facebook.com/"><img src="./images/facebook.png" alt=""></a>
+            <a href="https://www.twitter.com/"><img src="./images/twitter.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+            <a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
