--- a/author.html
+++ b/author.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Author</title>
     <link rel="stylesheet" href="./css/author.css" />
-    
   </head>
   <body>
     <nav class="navbar">
@@ -23,7 +22,7 @@
             <a href="about.html" class="nav-link">About Us</a>
             <a href="contact.html" class="nav-link">Contact Us</a>
             <div class="navbar-right-button">
-              <a href=""><button>Subscribe</button></a>
+              <a href="#"><button>Subscribe</button></a>
             </div>
           </div>
           <div class="toggle">
@@ -39,7 +38,7 @@
       <a href="about.html" class="nav-link">About Us</a>
       <a href="contact.html" class="nav-link">Contact Us</a>
       <div class="navbar-right-button">
-        <a href=""><button>Subscribe</button></a>
+        <a href="#"><button>Subscribe</button></a>
       </div>
     </nav>
     <header>
@@ -53,97 +52,39 @@
           risus viverra adipiscing at in tellus.
         </p>
       </div>
-      <div class="cards">
-        <div class="card">
-          <h1>My Posts</h1>
-          <div class="card-image"></div>
-          <div class="text">
-            <p>BUSINESS</p>
-          </div>
-          <h2>Font sizes in UI design: The complete guide to follow</h2>
-          <div class="second-text">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </div>
+      <div class="container">
+        <div class="cards">
           <div class="card">
-            <div class="second-card-image"></div>
-            <div class="second_text">
-              <p>Economy</p>
+            <h1>My Posts</h1>
+            <div class="card-image"></div>
+            <div class="text">
+              <p>BUSINESS</p>
             </div>
-            <div class="h2">
-              <h2>How to build rapport with your web design clients</h2>
-              <div class="text-p">
+            <h2>Font sizes in UI design: The complete guide to follow</h2>
+            <div class="second-text">
+              <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="card">
+              <div class="second-card-image"></div>
+              <div class="second_text">
+                <p>Economy</p>
+              </div>
+              <div class="h2">
+                <h2>How to build rapport with your web design clients</h2>
+                <div class="text-p">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </header>
-    <footer>
-      <div class="container">
-        <div class="footertop">
-          <img src="./images/Logo.png" alt="" />
-          <div class="footerlinks">
-            <a href="index.html">Home</a>
-            <a href="blog.html">Blog</a>
-            <a href="about.html">About us</a>
-            <a href="contact.html">Contact us</a>
-            <a href="policy.html">Privacy Policy</a>
-          </div>
-        </div>
-        <div class="footer-subscribe">
-          <h2>Subscribe to our news letter to get latest updates and news</h2>
-          <form class="footer-form">
-            <input type="email" placeholder="Enter Your Email" />
-            <button type="submit">Subscribe</button>
-          </form>
-        </div>
-        <div class="footer-bottom">
-          <div class="footer-bottom-left">
-            <p>Finstreet 118 2561 Fintown</p>
-            <p>Hello@finsweet.com 020 7993 2905</p>
-          </div>
-          <div class="footer-bottom-right">
-            <a href="https://www.facebook.com/"
-              ><img src="./images/facebook.png" alt=""
-            /></a>
-            <a href="https://www.twitter.com/"
-              ><img src="./images/twitter.png" alt=""
-            /></a>
-            <a href="https://www.instagram.com/"
-              ><img src="./images/instagram.png" alt=""
-            /></a>
-            <a href="https://www.linkedin.com/"
-              ><img src="./images/linkedin.png" alt=""
-            /></a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script src="./js/main.js"></script>
-      <script>
-        $(document).ready(function(){
-      $(".owl-carousel").owlCarousel({
-      loop: true,
-      margin: 10,
-      nav: true, 
-      items: 1,
-      responsive: {
-      800: {
-        items:1
-      },
-      1250: {
-        items:1
-      },
-    },
-      });
-    });
-      </script>
+    <footer></footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
