--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact(shermatov)</title>
     <link rel="stylesheet" href="./css/contact-shahzod.css">
+    <link
+    rel="stylesheet"
+    href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
 </head>
 <body>
     <header>
