--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <option value="2">Author</option>
             </select>
             <label for="contact"></label>
-            <textarea name="contact" placeholder="Message" id="contact" cols="99" rows="6"></textarea><br><br>
+            <textarea name="contact" placeholder="Message" id="contact" cols="102" rows="6"></textarea><br><br>
             <button type="submit" class="tugma"><p>SendMessage</p></button>
         </div>
         </form>       
@@ -93,7 +93,7 @@
         <div class="footer-subscribe">
           <h2>Subscribe to our news letter to get latest updates and news</h2>
           <form class="footer-form" >
-            <input type="email" placeholder="Enter Your Email">
+            <input type="email" placeholder="Enter Your Email" class="tugma-1">
             <button type="submit">Subscribe</button>
           </form>
         </div>
