--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <img src="./images/Logo.png" alt="">
           </div>
           <div class="hamburger">
-            <i class="fa-solid fa-bars" onclick="openNavbar()"></i>
+            <i class="uil uil-bars" onclick="openNavbar()"></i>
           </div>
           <div class="navlinks">
             <a href="index.html">Home</a>
